cmake_minimum_required(VERSION 3.31)
project(algo_hub_cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(P1144 最短路计数 "luogu/P1144 最短路计数.cpp")
add_executable(P1725 琪露诺 "luogu/P1725 琪露诺.cpp")
add_executable(P1966 [NOIP 2013 提高组] 火柴排队 "luogu/P1966 [NOIP 2013 提高组] 火柴排队.cpp")
add_executable(P1972 [SDOI2009] HH的项链 "luogu/P1972 [SDOI2009] HH的项链.cpp")
add_executable(P3373 【模板】线段树 2 "luogu/P3373 【模板】线段树 2.cpp")
add_executable(P3376 【模板】网络最大流 "luogu/P3376 【模板】网络最大流.cpp")
add_executable(P3381 【模板】最小费用最大流 "luogu/P3381 【模板】最小费用最大流.cpp")
add_executable(P3594 [POI2015] WIL "luogu/P3594 [POI2015] WIL.cpp")
add_executable(P3901 数列找不同 "luogu/P3901 数列找不同.cpp")
add_executable(P4513 小白逛公园 "luogu/P4513 小白逛公园.cpp")
add_executable(P5490 【模板】扫描线 & 矩形面积并 "luogu/P5490 【模板】扫描线 & 矩形面积并.cpp")

add_executable(P3572 [POI 2014] PTA-Little Bird "luogu/P3572 [POI 2014] PTA-Little Bird.cpp")
add_executable(P3694 邦邦的大合唱站队 "luogu/P3694 邦邦的大合唱站队.cpp")